<resources>
    <string name="app_name">无线建维优</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="permission_success">CMOS需要获取手机权限</string>
    <string name="permission_error">CMOS获取手机权限失败</string>
    <string name="common_upload">上传</string>
    <string name="common_picture">图片</string>
    <string name="common_map">地图</string>
    <string name="common_add">添加</string>
    <string name="common_qr_code">扫描</string>
    <string name="common_delete">删除</string>
    <string name="common_sign">签到</string>
    <string name="common_map_changge"></string>
    <string name="common_help">帮助</string>
    <string name="common_setting">设置</string>
    <string name="common_exit">退出</string>
    <string name="common_not_network">没有网络连接，请稍候重试</string>
    <string name="common_get_data_error">行政区划获取失败</string>
    <string name="common_error">抱歉，操作失败！</string>
    <string name="common_request">请求数据中.... </string>
    <string name="common_nodata">暂无数据</string>
    <string name="common_response">提交数据中…</string>
    <string name="common_vad_empty">请填写完整！</string>
    <string name="common_more">更多</string>
    <string name="common_query">查询</string>
    <string name="common_sub">提交数据</string>
    <string name="common_details">数据详情</string>
    <string name="common_save">保存</string>
    <string name="common_close">关闭</string>
    <string name="common_reset">重置</string>
    <string name="common_datac">现场数据采集</string>
    <string name="common_utime">最后更新日期：</string>
    <string name="common_user">更新提交人：</string>
    <string name="common_datastate">是否审核：</string>
    <string name="common_imgshow">浏览所有图片</string>
    <string name="common_imgupload">图片上传</string>
    <string name="common_imgupload_name_1">图片附件1</string>
    <string name="common_imgupload_name_2">图片附件2</string>
    <string name="common_imgupload_name_3">图片附件3</string>
    <string name="common_imgupload_file">图片附件</string>
    <string name="common_imgdes">图片描述</string>
    <string name="common_area">地区</string>
    <string name="common_county">县市</string>
    <string name="common_town">乡镇</string>
    <string name="common_about">关于软件</string>
    <string name="common_account_safe">帐号安全</string>
    <string name="common_update_app">软件更新</string>
    <string name="common_qr">扫描二维码分享软件</string>
    <string name="app_copy">中国电信股份有限公司云南分公司\nCopyRight©2013版权所有</string>
    <string name="common_changepwd">修改密码</string>
    <string name="common_clearaccount">退出当前帐号</string>
    <string name="common_old_pwd">原密码：</string>
    <string name="common_again_pwd">再次输入：</string>
    <string name="common_again_tips">请保证两次输入一致</string>
    <string name="common_autologin">自动登录</string>
    <string name="common_auto_httptest">自动测试网站</string>
    <string name="common_auto_teach">操作提示</string>
    <string name="common_auto4G">自动开启4G</string>
    <string name="common_autoWifi">自动开启Wifi</string>
    <string name="common_tips">提示</string>
    <string name="common_sure">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_home">返回主界面</string>
    <string name="common_camera">拍照上传</string>
    <string name="common_clickup">点击上传</string>
    <string name="common_mark_union">~</string>
    <string name="common_msg">消息提醒</string>
    <string name="common_msg_inspect">巡检审核提醒</string>
    <string name="common_msg_data">数据审核提醒</string>
    <string name="common_msg_qa">问答提醒</string>
    <string name="login_user">用户名：</string>
    <string name="login_pwd">密码：</string>
    <string name="login_auto_login">自动登录</string>
    <string name="login_hint_u">输入手机号</string>
    <string name="login_hint_p">输入密码</string>
    <string name="login_intro">●基站基础数据快速查询\n●WIFI基础数据快速查询\n●基站与WIFI等各项数据现场采集\n●实时定位、天线方位角测量等更多功能…</string>
    <string name="login_ln">登录</string>
    <string name="datasite_inspection">巡检点</string>
    <string name="datasite_site">资产清查</string>
    <string name="datasite_knowledge">知识库</string>
    <string name="datasite_box">工具箱</string>
    <string name="datasite_maintain">代维信息</string>
    <string name="ds_cdma_basestation">C网基站数据</string>
    <string name="ds_cdma_real_basestation">C网实际物理站点数据</string>
    <string name="ds_cdma_cell">C网扇区数据</string>
    <string name="ds_cdma_indoor">C网室分数据</string>
    <string name="ds_cdma_repeater">C网直放站数据</string>
    <string name="ds_bericher">致富通数据</string>
    <string name="ds_wifi_ac">Wifi网络AC数据</string>
    <string name="ds_wifi_ap">Wifi网络AP数据</string>
    <string name="ds_wifi_switch">Wifi网络交换机数据</string>
    <string name="ds_wifi_hot">Wifi网络热点数据</string>
    <string name="ds_pinset">接入网络数据</string>
    <string name="know_master">主设备</string>
    <string name="know_assort">配套设备</string>
    <string name="know_iquery">设备型号索引</string>
    <string name="know_qa">技术问答</string>
    <string name="suggest">意见反馈</string>
    <string name="box_unitc">单位换算</string>
    <string name="box_calculator">计算器</string>
    <string name="box_azimuth">方位角测量</string>
    <string name="box_downtilt">下倾角测量</string>
    <string name="box_lac">地图定位</string>
    <string name="box_gps">GPS校准</string>
    <string name="map_show">查看地图</string>
    <string name="get_lac">获取位置</string>
    <string name="it_sign">巡检签到</string>
    <string name="it_datasite">基站信息</string>
    <string name="it_bs">基站巡检</string>
    <string name="it_bs_new">物理站址巡检</string>
    <string name="it_bs_new_info">质量地图</string>
    <string name="it_bs_new_time">上次巡检时间</string>
    <string name="pre_item_id">维护项ID:</string>
    <string name="pre_item_device">维护设备:</string>
    <string name="pre_item_device_sub">维护设备子项:</string>
    <string name="pre_item_content">维护内容:</string>
    <string name="pre_item_marks">合格标准:</string>
    <string name="pre_item_way">实施方式:</string>
    <string name="pre_item_form">表单方式:</string>
    <string name="pre_item_remark">备注:</string>
    <string name="pre_item_state">巡检状态</string>
    <string name="pre_item_remark_info">备注:</string>
    <string name="it_record">巡检记录</string>
    <string name="it_trouble">巡检隐患</string>
    <string name="trouble_desc">隐患描述</string>
    <string name="trouble_potential_desc">备注</string>
    <string name="sys_notice_list">系统公告列表</string>
    <string name="sys_notice">系统公告</string>
    <string name="camera_flow">1、请拍取对应照片至条目，如：点击【基站全景】条目，选择【上传图片】，拍照全景后上传；\n2、如星标填充则已有图片，上传将覆盖原图片；\n3、若拍摄其他场景，请点击右上上传图标自定义拍摄</string>
    <string name="hint_name_bs">输入名称查询</string>
    <string name="bs_content">基站详细信息</string>
    <string name="bs_item_bi">基站基础信息</string>
    <string name="bs_item_biarea">区域信息</string>
    <string name="bs_item_bibelong">基站及归属信息</string>
    <string name="bs_item_biconf">基站配置</string>
    <string name="bs_item_pt">基站配套信息</string>
    <string name="bs_item_ptzgj">增高架信息</string>
    <string name="bs_item_pttransfer">基站传输信息</string>
    <string name="bs_item_ptele">电源信息</string>
    <string name="bs_item_ptkt">空调系统</string>
    <string name="bs_item_ptroom">机房信息</string>
    <string name="bs_item_other">基站其他信息</string>
    <string name="bs_item_date">所属扇区</string>
    <string name="bs_name">基站名称</string>
    <string name="hint_name_cell">输入名称查询</string>
    <string name="hint_name_cell_ci">输入CI查询</string>
    <string name="cell_content">扇区详细信息</string>
    <string name="cell_item_bi">扇区基础信息</string>
    <string name="cell_item_biarea">区域信息</string>
    <string name="cell_item_bibelong">扇区及归属信息</string>
    <string name="cell_item_biconf">扇区配置</string>
    <string name="cell_item_pt">扇区配套信息</string>
    <string name="cell_item_pttx">天线信息</string>
    <string name="cell_item_ptzgj">增高架信息</string>
    <string name="cell_item_pttransfer">传输信息</string>
    <string name="cell_item_ptele">电源信息</string>
    <string name="cell_item_ptkt">空调信息</string>
    <string name="cell_item_ptroom">机房信息</string>
    <string name="cell_item_other">扇区其他信息</string>
    <string name="cell_item_bianjie">扇区边界信息</string>
    <string name="cell_item_indoor">所属室分</string>
    <string name="cell_item_repeater">所属直放</string>
    <string name="cell_item_select_name">名称</string>
    <string name="cell_item_select_ci">CI</string>
    <string name="cell_rru_tip">若扇区不属于独立物理站点，则无需采集配套信息</string>
    <string name="indoor_content">室分系统详细信息</string>
    <string name="hint_name_indoor">输入名称查询</string>
    <string name="indoor_item_biarea">区域信息</string>
    <string name="indoor_item_fb">分布系统</string>
    <string name="indoor_item_CWXY">C网信源</string>
    <string name="indoor_item_dry">干放</string>
    <string name="indoor_item_other">其他信息</string>
    <string name="hint_name_repeater">输入名称查询</string>
    <string name="re_content">直放站详细信息</string>
    <string name="re_item_bi">直放站基础信息</string>
    <string name="re_item_biarea">区域信息</string>
    <string name="re_item_birepeater">直放站信息</string>
    <string name="re_item_bidonor">施主站信息</string>
    <string name="re_item_pt">直放站配套信息</string>
    <string name="re_item_ptantenna">天馈</string>
    <string name="re_item_ptmajor">主设备</string>
    <string name="re_item_ptassort">配套信息</string>
    <string name="hint_name_wifi_hot">输入名称查询</string>
    <string name="wifi_hot_content">WIFI热点详细信息</string>
    <string name="wifi_item_bi">基础信息</string>
    <string name="wifi_item_area">区域信息</string>
    <string name="wifi_item_pt">配置信息</string>
    <string name="wifi_item_time">开放时间</string>
    <string name="wifi_item_other">其他信息</string>
    <string name="pd_type">设备类别</string>
    <string name="pd_ft">生产厂家</string>
    <string name="pd_model">规格型号</string>
    <string name="pd_size">尺寸</string>
    <string name="pd_structure">结构</string>
    <string name="pd_appearance">外观</string>
    <string name="pd_performance">性能</string>
    <string name="pd_feature">特点</string>
    <string name="pd_maintenance">维护要点</string>
    <string name="hint_model">输入设备型号</string>
    <string name="query_offer">查看评论</string>
    <string name="propose_offer">发表评论</string>
    <string name="pd_offer">产品设备评论</string>
    <string name="hint_offer">输入评论</string>
    <string name="commit_offer">提交评论</string>
    <string name="pd_user_name">产品创建人:</string>
    <string name="pd_create_time">创建时间:</string>
    <string name="inset_bs">当前接入基站</string>
    <string name="inset_cell">当前接入小区</string>
    <string name="inset_cell_rru">当前接入小区【独立物理站点RRU】</string>
    <string name="inset_wifi">邻近WIFI热点</string>
    <string name="get_angle">获取角度</string>
    <string name="measure_dway">1、请将手机背面平贴天线背面（若无条件，请将手机固定至与天线垂直平行）\n2、固定手机，确保手机处于静止状态\n3、点击【获取角度】按钮，完成测量</string>
    <string name="measure_away">1、应将手机远离磁场，如变压器、高压线等，周围1米内勿使用手机通话\n2、可把手机沿∽形摇晃进行磁场矫正\n3、在待测天线正后方一定距离，将手机平放，并将手机方向指向天线面板所迎方向\n4、固定手机，确保手机处于静止状态\n5、点击【获取角度】按钮，完成测量</string>
    <string name="content_description"/>
    <string name="dwhs">单位换算</string>
    <string name="gps_state">GPS状态</string>
    <string name="gps_open">GPS开启</string>
    <string name="gps_close">GPS关闭</string>
    <string name="gps_elevation">海拔</string>
    <string name="float_default">0.0</string>
    <string name="time_default">--:--</string>
    <string name="gps_time">定位时间</string>
    <string name="gps_lon">经度</string>
    <string name="gps_lat">纬度</string>
    <string name="gps_star_count">卫星：%1$s，可用：%2$s</string>
    <string name="it_sbs">选择巡检基站</string>
    <string name="it_nearbs">邻近基站【两公里】</string>
    <string name="it_nearbs_new">巡检基站</string>
    <string name="it_splan">选择巡检作业计划</string>
    <string name="it_splan_info">上次作业填写内容</string>
    <string name="it_troublelist">隐患作业列表</string>
    <string name="it_sgin_func">签到功能：</string>
    <string name="it_sgin_func_v">GPS精确定位巡检位置</string>
    <string name="it_sgin_require">签到要求：</string>
    <string name="it_sgin_require_v">每次巡检在室外开阔处，开启GPS</string>
    <string name="it_sgin_times">签到时效：</string>
    <string name="it_sgin_times_v">60分钟</string>
    <string name="it_sign_now">签到</string>
</resources>