<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/draw_bg_app"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>

    <!--    <TextView
            android:id="@+id/txt_title"
            style="@style/text_title"
            android:layout_height="45dp"
            android:background="@drawable/bg_header"
            android:gravity="center" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/text_default"
            android:layout_margin="5dp"
            android:text="@string/pd_type" />

        <Spinner
            android:id="@+id/sp_pd_type"
            style="@style/spinner_black"
            android:layout_margin="5dp" />

        <TextView
            style="@style/text_default"
            android:layout_margin="5dp"
            android:text="@string/pd_ft" />

        <Spinner
            android:id="@+id/sp_pd_ft"
            style="@style/spinner_black"
            android:layout_margin="5dp" />

        <TextView
            style="@style/text_default"
            android:layout_margin="5dp"
            android:text="@string/pd_model" />

        <Spinner
            android:id="@+id/sp_pd_model"
            style="@style/spinner_black"
            android:layout_margin="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/bg_btn_panle"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_query"
            style="@style/btn_blue"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/common_query" />
    </LinearLayout>

</LinearLayout>