<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/draw_bg_app"
    android:orientation="vertical" >

   <!-- <LinearLayout style="@style/layout_title" >

        <TextView
            style="@style/text_title"
            android:gravity="center"
            android:text="@string/common_changepwd" />
    </LinearLayout>-->

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@drawable/draw_bg_round"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="1dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:contentDescription="@string/common_account_safe"
                    android:src="@drawable/ic_users" />

                <TextView
                    android:id="@+id/tv_user_id"
                    style="@style/text_default"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@drawable/draw_bg_round"
                android:orientation="vertical" >

                <TableLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:stretchColumns="1" >

                    <TableRow android:layout_marginTop="10dip" >

                        <TextView
                            style="@style/text_default"
                            android:layout_column="0"
                            android:gravity="right"
                            android:text="@string/common_old_pwd" />

                        <EditText
                            android:id="@+id/et_pwd"
                            style="@style/edit"
                            android:layout_column="1"
                            android:inputType="textPassword"
                            android:text="" />
                    </TableRow>

                    <TableRow android:layout_marginTop="10dip" >

                        <TextView
                            style="@style/text_default"
                            android:layout_width="wrap_content"
                            android:layout_height="40dip"
                            android:gravity="right"
                            android:text="@string/login_pwd" />

                        <EditText
                            android:id="@+id/et_new_pwd"
                            style="@style/edit"
                            android:inputType="textPassword"
                            android:text="" />
                    </TableRow>

                    <TableRow android:layout_marginTop="10dip" >

                        <TextView
                            style="@style/text_default"
                            android:layout_width="wrap_content"
                            android:layout_height="40dip"
                            android:gravity="right"
                            android:text="@string/common_again_pwd" />

                        <EditText
                            android:id="@+id/et_again_pwd"
                            style="@style/edit"
                            android:hint="@string/common_again_tips"
                            android:inputType="textPassword" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/btn_pwd_changed"
                        style="@style/btn_blue"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/common_save" />

                    <Button
                        android:id="@+id/btn_pwd_reset"
                        style="@style/btn_white"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/common_reset" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>