<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/draw_bg_app"
    android:orientation="vertical" >
    <include layout="@layout/toolbar"></include>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_deep"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow android:layout_marginBottom="0.5dp" >

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/it_sgin_func" />

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/it_sgin_func_v" />
        </TableRow>

        <TableRow android:layout_marginBottom="0.5dp" >

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/it_sgin_require" />

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/it_sgin_require_v" />
        </TableRow>

        <TableRow android:layout_marginBottom="0.5dp" >

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/it_sgin_times" />

            <TextView
                style="@style/text_default"
                android:layout_height="match_parent"
                android:layout_marginRight="0.5dp"
                android:background="@color/white"
                android:gravity="left|center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/it_sgin_times_v" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/tv_loc_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/draw_bg_group_normal"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/main_app"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_deep"
        android:paddingBottom="0.5dp" >

        <TextView
            android:id="@+id/tv_lng"
            style="@style/text_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/float_default" />

        <TextView
            android:id="@+id/tv_lat"
            style="@style/text_default"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|center"
            android:padding="5dp"
            android:singleLine="false"
            android:text="@string/float_default" />
    </LinearLayout>

    <com.baidu.mapapi.map.MapView
        android:id="@+id/mv_sgin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/bg_btn_panle"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sign_now"
            style="@style/btn_blue"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:text="@string/it_sign_now" />
    </LinearLayout>

</LinearLayout>